[package]
name = "refineable-gpui-standalone"
version = "1.7.2"
license = "Apache-2.0"
description = "A macro for creating 'refinement' types that can be used to partially initialize or mutate a complex struct"
edition = "2024"
repository = "https://github.com/zed-industries/zed"

[lib]
path = "src/refineable.rs"
doctest = false
name = "refineable"

[dependencies]
derive_refineable = {package = "derive_refineable-gpui-standalone", version = "1.7.2"}
